Enhance all Java files with modern best practices and design patterns
Key improvements across all 18 files:

- PriceData: Converted to Java record with compact canonical constructor validation
- TradingStrategy: Upgraded to sealed interface (permits SMA, RSI, MACD)
- Trade: Made final class with immutable constructor fields, Objects.requireNonNull
  validation, switch expression for direction-based P/L calculation
- BacktestResult: Added streams for trade statistics, List.copyOf for immutable
  equity curve, Collections.unmodifiableList for trades, extracted constants
- BacktestEngine: Added Objects.requireNonNull validation, extracted closePosition
  helper method, used List.getFirst()/getLast()
- Strategy classes (SMA, RSI, MACD): Made final, added constructor validation
  for period bounds, used String.formatted()
- SPYBacktest: Made final utility class, extracted constants, used List.of() for
  immutable strategy list, java.util.logging instead of printStackTrace
- GetYahooQuotes: try-with-resources for HTTP responses and streams, StringBuilder
  instead of StringBuffer, extracted constants
- YahooFinanceData: try-with-resources for streams, extracted parseBigDecimal
  helper to eliminate "N/A" handling duplication, bounded retry with MAX_RETRIES
- YahooHistoricalData: try-with-resources, bounded retry replacing infinite
  recursion on error, extracted PATTERN_DAYS constant
- MorningstarData: Fixed infinite recursion on error with MAX_RETRIES, extracted
  isRevenueRow/parseLong/divideRevenue helpers, try-with-resources
- FormulaData: Extracted default rate constants, initialized all BigDecimal
  fields to ZERO
- Dates: Migrated to java.time.LocalDate/DayOfWeek for date calculations,
  switch expressions for weekend adjustment, DateTimeFormatter constants
- Pattern: Replaced Comparator interface with Comparable, extracted static
  analyzeAndPrint factory method, used printf formatting
- Trends: Replaced BufferedReader/Writer with java.nio.file.Files API,
  java.u