@@ -2,25 +2,31 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
-public class BacktestEngine {
-    private BigDecimal initialCapital;
-    private BigDecimal commission;
+public final class BacktestEngine {
+
+    private final BigDecimal initialCapital;
+    private final BigDecimal commission;
 
     public BacktestEngine(BigDecimal initialCapital, BigDecimal commission) {
-        this.initialCapital = initialCapital;
-        this.commission = commission;
+        this.initialCapital = Objects.requireNonNull(initialCapital, "initialCapital must not be null");
+        this.commission = Objects.requireNonNull(commission, "commission must not be null");
     }
 
     public BacktestResult run(TradingStrategy strategy, List<PriceData> data) {
-        BacktestResult result = new BacktestResult(strategy.getName(), initialCapital);
+        Objects.requireNonNull(strategy, "strategy must not be null");
+        if (data == null || data.isEmpty()) {
+            throw new IllegalArgumentException("data must not be null or empty");
+        }
 
+        var result = new BacktestResult(strategy.getName(), initialCapital);
         BigDecimal cash = initialCapital;
         Trade currentTrade = null;
-        List<BigDecimal> equityCurve = new ArrayList<>();
+        List<BigDecimal> equityCurve = new ArrayList<>(data.size());
 
-        result.setStartDate(data.get(0).getDate());
-        result.setEndDate(data.get(data.size() - 1).getDate());
+        result.setStartDate(data.getFirst().getDate());
+        result.setEndDate(data.getLast().getDate());
 
         for (int i = 0; i < data.size(); i++) {
             PriceData bar = data.get(i);
@@ -36,7 +42,6 @@ public class BacktestEngine {
 
             // Process signals
             if (signal == TradingStrategy.Signal.BUY && currentTrade == null) {
-                // Open a long position: use all available cash
                 int shares = cash.subtract(commission)
                         .divide(bar.getClose(), 0, RoundingMode.DOWN)
                         .intValue();
@@ -47,13 +52,10 @@ public class BacktestEngine {
                     currentTrade = new Trade(Trade.Direction.LONG, bar.getDate(), bar.getClose(), shares);
                 }
 
-            } else if (signal == TradingStrategy.Signal.SELL && currentTrade != null
+            } else if (signal == TradingStrategy.Signal.SELL
+                    && currentTrade != null
                     && currentTrade.getStatus() == Trade.Status.OPEN) {
-                // Close the position
-                BigDecimal proceeds = bar.getClose().multiply(BigDecimal.valueOf(currentTrade.getShares()))
-                        .subtract(commission);
-                cash = cash.add(proceeds);
-                currentTrade.close(bar.getDate(), bar.getClose());
+                cash = closePosition(currentTrade, bar, cash);
                 result.addTrade(currentTrade);
                 currentTrade = null;
             }
@@ -61,11 +63,8 @@ public class BacktestEngine {
 
         // Close any open position at the last bar
         if (currentTrade != null && currentTrade.getStatus() == Trade.Status.OPEN) {
-            PriceData lastBar = data.get(data.size() - 1);
-            BigDecimal proceeds = lastBar.getClose().multiply(BigDecimal.valueOf(currentTrade.getShares()))
-                    .subtract(commission);
-            cash = cash.add(proceeds);
-            currentTrade.close(lastBar.getDate(), lastBar.getClose());
+            PriceData lastBar = data.getLast();
+            cash = closePosition(currentTrade, lastBar, cash);
             result.addTrade(currentTrade);
         }
 
@@ -73,5 +72,13 @@ public class BacktestEngine {
         result.setEquityCurve(equityCurve);
 
         return result;
+    }
+
+    private BigDecimal closePosition(Trade trade, PriceData bar, BigDecimal cash) {
+        BigDecimal proceeds = bar.getClose()
+                .multiply(BigDecimal.valueOf(trade.getShares()))
+                .subtract(commission);
+        trade.close(bar.getDate(), bar.getClose());
+        return cash.add(proceeds);
     }
 }
