@@ -1,35 +1,39 @@
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
-public class BacktestResult {
-    private String strategyName;
-    private BigDecimal initialCapital;
+public final class BacktestResult {
+
+    private static final int TRADING_DAYS_PER_YEAR = 252;
+    private static final BigDecimal HUNDRED = BigDecimal.valueOf(100);
+
+    private final String strategyName;
+    private final BigDecimal initialCapital;
+    private final List<Trade> trades = new ArrayList<>();
     private BigDecimal finalCapital;
-    private List<Trade> trades;
-    private List<BigDecimal> equityCurve;
+    private List<BigDecimal> equityCurve = List.of();
     private String startDate;
     private String endDate;
 
     public BacktestResult(String strategyName, BigDecimal initialCapital) {
-        this.strategyName = strategyName;
-        this.initialCapital = initialCapital;
+        this.strategyName = Objects.requireNonNull(strategyName, "strategyName must not be null");
+        this.initialCapital = Objects.requireNonNull(initialCapital, "initialCapital must not be null");
         this.finalCapital = initialCapital;
-        this.trades = new ArrayList<>();
-        this.equityCurve = new ArrayList<>();
     }
 
     public void addTrade(Trade trade) {
-        trades.add(trade);
+        trades.add(Objects.requireNonNull(trade, "trade must not be null"));
     }
 
     public void setFinalCapital(BigDecimal finalCapital) {
-        this.finalCapital = finalCapital;
+        this.finalCapital = Objects.requireNonNull(finalCapital);
     }
 
     public void setEquityCurve(List<BigDecimal> equityCurve) {
-        this.equityCurve = equityCurve;
+        this.equityCurve = List.copyOf(equityCurve);
     }
 
     public void setStartDate(String startDate) { this.startDate = startDate; }
@@ -38,74 +42,67 @@ public class BacktestResult {
     public BigDecimal getTotalReturn() {
         return finalCapital.subtract(initialCapital)
                 .divide(initialCapital, 6, RoundingMode.HALF_UP)
-                .multiply(BigDecimal.valueOf(100));
+                .multiply(HUNDRED);
     }
 
     public BigDecimal getTotalProfitLoss() {
         return finalCapital.subtract(initialCapital);
     }
 
-    public int getTotalTrades() {
-        return (int) trades.stream().filter(t -> t.getStatus() == Trade.Status.CLOSED).count();
+    public long getTotalTrades() {
+        return closedTrades().size();
     }
 
-    public int getWinningTrades() {
-        return (int) trades.stream()
-                .filter(t -> t.getStatus() == Trade.Status.CLOSED)
-                .filter(Trade::isWin).count();
+    public long getWinningTrades() {
+        return closedTrades().stream().filter(Trade::isWin).count();
     }
 
-    public int getLosingTrades() {
+    public long getLosingTrades() {
         return getTotalTrades() - getWinningTrades();
     }
 
     public BigDecimal getWinRate() {
-        if (getTotalTrades() == 0) return BigDecimal.ZERO;
+        long total = getTotalTrades();
+        if (total == 0) return BigDecimal.ZERO;
         return BigDecimal.valueOf(getWinningTrades())
-                .divide(BigDecimal.valueOf(getTotalTrades()), 4, RoundingMode.HALF_UP)
-                .multiply(BigDecimal.valueOf(100));
+                .divide(BigDecimal.valueOf(total), 4, RoundingMode.HALF_UP)
+                .multiply(HUNDRED);
     }
 
     public BigDecimal getAverageWin() {
-        List<BigDecimal> wins = new ArrayList<>();
-        for (Trade t : trades) {
-            if (t.getStatus() == Trade.Status.CLOSED && t.isWin()) {
-                wins.add(t.getProfitLoss());
-            }
-        }
+        var wins = closedTrades().stream()
+                .filter(Trade::isWin)
+                .map(Trade::getProfitLoss)
+                .toList();
         if (wins.isEmpty()) return BigDecimal.ZERO;
-        BigDecimal sum = BigDecimal.ZERO;
-        for (BigDecimal w : wins) sum = sum.add(w);
+        BigDecimal sum = wins.stream().reduce(BigDecimal.ZERO, BigDecimal::add);
         return sum.divide(BigDecimal.valueOf(wins.size()), 2, RoundingMode.HALF_UP);
     }
 
     public BigDecimal getAverageLoss() {
-        List<BigDecimal> losses = new ArrayList<>();
-        for (Trade t : trades) {
-            if (t.getStatus() == Trade.Status.CLOSED && !t.isWin()) {
-                losses.add(t.getProfitLoss());
-            }
-        }
+        var losses = closedTrades().stream()
+                .filter(t -> !t.isWin())
+                .map(Trade::getProfitLoss)
+                .toList();
         if (losses.isEmpty()) return BigDecimal.ZERO;
-        BigDecimal sum = BigDecimal.ZERO;
-        for (BigDecimal l : losses) sum = sum.add(l);
+        BigDecimal sum = losses.stream().reduce(BigDecimal.ZERO, BigDecimal::add);
         return sum.divide(BigDecimal.valueOf(losses.size()), 2, RoundingMode.HALF_UP);
     }
 
     public BigDecimal getProfitFactor() {
         BigDecimal grossProfit = BigDecimal.ZERO;
         BigDecimal grossLoss = BigDecimal.ZERO;
-        for (Trade t : trades) {
-            if (t.getStatus() == Trade.Status.CLOSED) {
-                if (t.isWin()) {
-                    grossProfit = grossProfit.add(t.getProfitLoss());
-                } else {
-                    grossLoss = grossLoss.add(t.getProfitLoss().abs());
-                }
+        for (Trade t : closedTrades()) {
+            if (t.isWin()) {
+                grossProfit = grossProfit.add(t.getProfitLoss());
+            } else {
+                grossLoss = grossLoss.add(t.getProfitLoss().abs());
             }
         }
         if (grossLoss.compareTo(BigDecimal.ZERO) == 0) {
-            return grossProfit.compareTo(BigDecimal.ZERO) > 0 ? BigDecimal.valueOf(999.99) : BigDecimal.ZERO;
+            return grossProfit.compareTo(BigDecimal.ZERO) > 0
+                    ? BigDecimal.valueOf(999.99)
+                    : BigDecimal.ZERO;
         }
         return grossProfit.divide(grossLoss, 2, RoundingMode.HALF_UP);
     }
@@ -113,7 +110,7 @@ public class BacktestResult {
     public BigDecimal getMaxDrawdown() {
         if (equityCurve.isEmpty()) return BigDecimal.ZERO;
 
-        BigDecimal peak = equityCurve.get(0);
+        BigDecimal peak = equityCurve.getFirst();
         BigDecimal maxDrawdown = BigDecimal.ZERO;
 
         for (BigDecimal equity : equityCurve) {
@@ -122,7 +119,7 @@ public class BacktestResult {
             }
             BigDecimal drawdown = peak.subtract(equity)
                     .divide(peak, 6, RoundingMode.HALF_UP)
-                    .multiply(BigDecimal.valueOf(100));
+                    .multiply(HUNDRED);
             if (drawdown.compareTo(maxDrawdown) > 0) {
                 maxDrawdown = drawdown;
             }
@@ -133,39 +130,36 @@ public class BacktestResult {
     public BigDecimal getSharpeRatio(int tradingDaysPerYear) {
         if (equityCurve.size() < 2) return BigDecimal.ZERO;
 
-        // Calculate daily returns
-        List<Double> dailyReturns = new ArrayList<>();
+        double[] dailyReturns = new double[equityCurve.size() - 1];
         for (int i = 1; i < equityCurve.size(); i++) {
-            double ret = equityCurve.get(i).subtract(equityCurve.get(i - 1))
+            dailyReturns[i - 1] = equityCurve.get(i).subtract(equityCurve.get(i - 1))
                     .divide(equityCurve.get(i - 1), 10, RoundingMode.HALF_UP)
                     .doubleValue();
-            dailyReturns.add(ret);
         }
 
-        // Mean return
-        double sumReturns = 0;
-        for (double r : dailyReturns) sumReturns += r;
-        double meanReturn = sumReturns / dailyReturns.size();
+        double meanReturn = 0;
+        for (double r : dailyReturns) meanReturn += r;
+        meanReturn /= dailyReturns.length;
 
-        // Standard deviation
         double sumSqDiff = 0;
         for (double r : dailyReturns) {
             sumSqDiff += Math.pow(r - meanReturn, 2);
         }
-        double stdDev = Math.sqrt(sumSqDiff / dailyReturns.size());
+        double stdDev = Math.sqrt(sumSqDiff / dailyReturns.length);
 
         if (stdDev == 0) return BigDecimal.ZERO;
 
-        // Annualized Sharpe (assuming risk-free rate ~ 0 for simplicity)
         double sharpe = (meanReturn / stdDev) * Math.sqrt(tradingDaysPerYear);
         return BigDecimal.valueOf(sharpe).setScale(2, RoundingMode.HALF_UP);
     }
 
     public BigDecimal getBuyAndHoldReturn(List<PriceData> data) {
         if (data.isEmpty()) return BigDecimal.ZERO;
-        BigDecimal first = data.get(0).getClose();
-        BigDecimal last = data.get(data.size() - 1).getClose();
-        return last.subtract(first).divide(first, 6, RoundingMode.HALF_UP).multiply(BigDecimal.valueOf(100));
+        BigDecimal first = data.getFirst().getClose();
+        BigDecimal last = data.getLast().getClose();
+        return last.subtract(first)
+                .divide(first, 6, RoundingMode.HALF_UP)
+                .multiply(HUNDRED);
     }
 
     public void printReport(List<PriceData> data) {
@@ -189,7 +183,7 @@ public class BacktestResult {
         System.out.printf("  Total Return:        %s%%%n", getTotalReturn().setScale(2, RoundingMode.HALF_UP));
         System.out.printf("  Buy & Hold Return:   %s%%%n", getBuyAndHoldReturn(data).setScale(2, RoundingMode.HALF_UP));
         System.out.printf("  Total P/L:           $%s%n", getTotalProfitLoss().setScale(2, RoundingMode.HALF_UP));
-        System.out.printf("  Sharpe Ratio:        %s%n", getSharpeRatio(252));
+        System.out.printf("  Sharpe Ratio:        %s%n", getSharpeRatio(TRADING_DAYS_PER_YEAR));
         System.out.printf("  Max Drawdown:        %s%%%n", getMaxDrawdown().setScale(2, RoundingMode.HALF_UP));
         System.out.printf("  Profit Factor:       %s%n", getProfitFactor());
         System.out.println();
@@ -205,15 +199,14 @@ public class BacktestResult {
         System.out.printf("  Average Loss:        $%s%n", getAverageLoss());
         System.out.println();
 
-        if (!trades.isEmpty()) {
+        List<Trade> closed = closedTrades();
+        if (!closed.isEmpty()) {
             System.out.println(thinSep);
             System.out.println("  TRADE LOG");
             System.out.println(thinSep);
             int count = 1;
-            for (Trade t : trades) {
-                if (t.getStatus() == Trade.Status.CLOSED) {
-                    System.out.printf("  #%-4d %s%n", count++, t);
-                }
+            for (Trade t : closed) {
+                System.out.printf("  #%-4d %s%n", count++, t);
             }
         }
 
@@ -221,9 +214,15 @@ public class BacktestResult {
         System.out.println(separator);
     }
 
+    private List<Trade> closedTrades() {
+        return trades.stream()
+                .filter(t -> t.getStatus() == Trade.Status.CLOSED)
+                .toList();
+    }
+
     public String getStrategyName() { return strategyName; }
     public BigDecimal getInitialCapital() { return initialCapital; }
     public BigDecimal getFinalCapital() { return finalCapital; }
-    public List<Trade> getTrades() { return trades; }
+    public List<Trade> getTrades() { return Collections.unmodifiableList(trades); }
     public List<BigDecimal> getEquityCurve() { return equityCurve; }
 }
