@@ -1,145 +1,135 @@
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.io.FileOutputStream;
 import java.io.BufferedInputStream;
-import java.io.File;
 import java.io.BufferedOutputStream;
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.BufferedReader;
 import java.util.Arrays;
 import java.util.List;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
-import org.apache.http.HttpEntity;;
+import org.apache.http.HttpEntity;
 import org.apache.http.HttpResponse;
-
-import org.apache.http.client.HttpClient;
 import org.apache.http.client.CookieStore;
-import org.apache.http.client.utils.HttpClientUtils;
+import org.apache.http.client.HttpClient;
+import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.protocol.HttpClientContext;
-import org.apache.http.cookie.Cookie;
+import org.apache.http.client.utils.HttpClientUtils;
 import org.apache.http.impl.client.BasicCookieStore;
 import org.apache.http.impl.client.HttpClientBuilder;
-import org.apache.http.client.methods.HttpGet;
 
 import org.apache.commons.lang3.StringEscapeUtils;
 
-
 public class GetYahooQuotes {
 
-    HttpClient client = HttpClientBuilder.create().build();
-    HttpClientContext context = HttpClientContext.create();
+    private static final Logger LOGGER = Logger.getLogger(GetYahooQuotes.class.getName());
+    private static final String USER_AGENT = "Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2.13) " +
+            "Gecko/20101206 Ubuntu/10.10 (maverick) Firefox/3.6.13";
+
+    private final HttpClient client;
+    private final HttpClientContext context;
 
     public GetYahooQuotes() {
         CookieStore cookieStore = new BasicCookieStore();
-        client = HttpClientBuilder.create().build();
-        context = HttpClientContext.create();
+        this.client = HttpClientBuilder.create().build();
+        this.context = HttpClientContext.create();
         context.setCookieStore(cookieStore);
     }
 
     public String getPage(String symbol) {
-        String rtn = null;
-        String url = String.format("https://finance.yahoo.com/quote/%s/?p=%s", symbol, symbol);
-        HttpGet request = new HttpGet(url);
-        System.out.println(url);
+        String url = "https://finance.yahoo.com/quote/%s/?p=%s".formatted(symbol, symbol);
+        var request = new HttpGet(url);
+        request.addHeader("User-Agent", USER_AGENT);
 
-        request.addHeader("User-Agent", "Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2.13) Gecko/20101206 Ubuntu/10.10 (maverick) Firefox/3.6.13");
         try {
             HttpResponse response = client.execute(request, context);
-            System.out.println("Response Code : " + response.getStatusLine().getStatusCode());
+            int statusCode = response.getStatusLine().getStatusCode();
+            LOGGER.log(Level.FINE, "Response Code: {0}", statusCode);
 
-            BufferedReader rd = new BufferedReader(new InputStreamReader(response.getEntity().getContent()));
-            StringBuffer result = new StringBuffer();
-            String line = "";
-            while ((line = rd.readLine()) != null) {
-                result.append(line);
+            try (var rd = new BufferedReader(new InputStreamReader(response.getEntity().getContent()))) {
+                var result = new StringBuilder();
+                String line;
+                while ((line = rd.readLine()) != null) {
+                    result.append(line);
+                }
+                return result.toString();
+            } finally {
+                HttpClientUtils.closeQuietly(response);
             }
-            rtn = result.toString();
-            HttpClientUtils.closeQuietly(response);
-        } catch (Exception ex) {
-            System.out.println("Exception");
-            System.out.println(ex);
+        } catch (IOException ex) {
+            LOGGER.log(Level.WARNING, "Failed to fetch page for symbol: {0}", symbol);
         }
-        System.out.println("returning from getPage");
-        return rtn;
+        return null;
     }
 
     public List<String> splitPageData(String page) {
-        // Return the page as a list of string using } to split the page
         return Arrays.asList(page.split("}"));
     }
 
     public String findCrumb(List<String> lines) {
-        String crumb = "";
         String rtn = "";
         for (String l : lines) {
-            if (l.indexOf("CrumbStore") > -1) {
+            if (l.contains("CrumbStore")) {
                 rtn = l;
                 break;
             }
         }
-        // ,"CrumbStore":{"crumb":"OKSUqghoLs8"
+
         if (rtn != null && !rtn.isEmpty()) {
-            String[] vals = rtn.split(":");                 // get third item
-            crumb = vals[2].replace("\"", "");              // strip quotes
-            crumb = StringEscapeUtils.unescapeJava(crumb);  // unescape escaped values (particularly, \u002f
+            String[] vals = rtn.split(":");
+            String crumb = vals[2].replace("\"", "");
+            return StringEscapeUtils.unescapeJava(crumb);
         }
-        return crumb;
+        return "";
     }
 
     public String getCrumb(String symbol) {
-        return findCrumb(splitPageData(getPage(symbol)));
+        String page = getPage(symbol);
+        if (page == null) return "";
+        return findCrumb(splitPageData(page));
     }
 
-
     public void downloadData(String symbol, long startDate, long endDate, String crumb) {
-        String filename = String.format("%s.csv", symbol);
-        String url = String.format("https://query1.finance.yahoo.com/v7/finance/download/%s?period1=%s&period2=%s&interval=1d&events=history&crumb=%s", symbol, startDate, endDate, crumb);
-        HttpGet request = new HttpGet(url);
-        System.out.println(url);
+        String filename = "%s.csv".formatted(symbol);
+        String url = "https://query1.finance.yahoo.com/v7/finance/download/%s?period1=%s&period2=%s&interval=1d&events=history&crumb=%s"
+                .formatted(symbol, startDate, endDate, crumb);
 
-        request.addHeader("User-Agent", "Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2.13) Gecko/20101206 Ubuntu/10.10 (maverick) Firefox/3.6.13");
+        var request = new HttpGet(url);
+        request.addHeader("User-Agent", USER_AGENT);
+
         try {
             HttpResponse response = client.execute(request, context);
-            System.out.println("Response Code : " + response.getStatusLine().getStatusCode());
-            HttpEntity entity = response.getEntity();
-
-            String reasonPhrase = response.getStatusLine().getReasonPhrase();
             int statusCode = response.getStatusLine().getStatusCode();
+            String reasonPhrase = response.getStatusLine().getReasonPhrase();
 
-            System.out.println(String.format("statusCode: %d", statusCode));
-            System.out.println(String.format("reasonPhrase: %s", reasonPhrase));
+            LOGGER.log(Level.FINE, "statusCode: {0}, reasonPhrase: {1}",
+                    new Object[]{statusCode, reasonPhrase});
 
+            HttpEntity entity = response.getEntity();
             if (entity != null) {
-                BufferedInputStream bis = new BufferedInputStream(entity.getContent());
-                BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream(new File(filename)));
-                int inByte;
-                while ((inByte = bis.read()) != -1)
-                    bos.write(inByte);
-                bis.close();
-                bos.close();
+                try (var bis = new BufferedInputStream(entity.getContent());
+                     var bos = new BufferedOutputStream(new FileOutputStream(new File(filename)))) {
+                    bis.transferTo(bos);
+                }
             }
             HttpClientUtils.closeQuietly(response);
-
-        } catch (Exception ex) {
-            System.out.println("Exception");
-            System.out.println(ex);
+        } catch (IOException ex) {
+            LOGGER.log(Level.WARNING, "Failed to download data for symbol: {0}", symbol);
         }
     }
 
-    public static void main (String[] args) {
-       // if (args.length > 0 ) {
-            GetYahooQuotes c = new GetYahooQuotes();
-           // for (String symbol: args) {
-        String symbol = "aapl";
-                String crumb = c.getCrumb(symbol);
-                if (crumb != null && !crumb.isEmpty()) {
-                    System.out.println(String.format("Downloading data to %s", symbol));
-                    System.out.println("Crumb: " + crumb);
-                    c.downloadData(symbol, 0, System.currentTimeMillis(), crumb);
-                } else {
-                    System.out.println(String.format("Error retreiving data for %s", symbol));
-                }
-           // }
-      //  } else {
-            System.out.println("Usage: java -classpath $CLASSPATH GetYahooQuotes SYMBOL");
-      //  }
+    public static void main(String[] args) {
+        var c = new GetYahooQuotes();
+        String symbol = args.length > 0 ? args[0] : "aapl";
+
+        String crumb = c.getCrumb(symbol);
+        if (crumb != null && !crumb.isEmpty()) {
+            LOGGER.log(Level.INFO, "Downloading data for {0}", symbol);
+            c.downloadData(symbol, 0, System.currentTimeMillis() / 1000, crumb);
+        } else {
+            LOGGER.log(Level.WARNING, "Error retrieving data for {0}", symbol);
+        }
     }
 }
